--- a/public/css/outputTailwind.css
+++ b/public/css/outputTailwind.css
@@ -869,10 +869,6 @@ video {
   display: flex;
 }
 
-.inline-flex {
-  display: inline-flex;
-}
-
 .table {
   display: table;
 }
@@ -895,14 +891,6 @@ video {
 
 .h-1 {
   height: 0.25rem;
-}
-
-.h-1\.5 {
-  height: 0.375rem;
-}
-
-.h-2\.5 {
-  height: 0.625rem;
 }
 
 .h-3 {
@@ -977,10 +965,6 @@ video {
   width: 0.25rem;
 }
 
-.w-1\.5 {
-  width: 0.375rem;
-}
-
 .w-1\/12 {
   width: 8.333333%;
 }
@@ -1007,10 +991,6 @@ video {
 
 .w-16 {
   width: 4rem;
-}
-
-.w-2\.5 {
-  width: 0.625rem;
 }
 
 .w-2\/3 {
@@ -1077,10 +1057,6 @@ video {
   width: full;
 }
 
-.w-auto {
-  width: auto;
-}
-
 .w-fit {
   width: -moz-fit-content;
   width: fit-content;
@@ -1088,6 +1064,14 @@ video {
 
 .w-full {
   width: 100%;
+}
+
+.w-12 {
+  width: 3rem;
+}
+
+.w-\[50\%\] {
+  width: 50%;
 }
 
 .max-w-72 {
@@ -1098,12 +1082,16 @@ video {
   max-width: 100%;
 }
 
-.flex-none {
-  flex: none;
+.max-w-\[5\%\] {
+  max-width: 5%;
 }
 
-.flex-shrink-0 {
-  flex-shrink: 0;
+.max-w-\[50\%\] {
+  max-width: 50%;
+}
+
+.flex-none {
+  flex: none;
 }
 
 .grow {
@@ -1122,23 +1110,6 @@ video {
   transform-origin: bottom;
 }
 
-.origin-bottom-left {
-  transform-origin: bottom left;
-}
-
-.origin-top-left {
-  transform-origin: top left;
-}
-
-.origin-top-right {
-  transform-origin: top right;
-}
-
-.-translate-x-1\.5 {
-  --tw-translate-x: -0.375rem;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
 .-translate-x-1\/2 {
   --tw-translate-x: -50%;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
@@ -1151,11 +1122,6 @@ video {
 
 .-translate-x-full {
   --tw-translate-x: -100%;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.-translate-y-1 {
-  --tw-translate-y: -0.25rem;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
@@ -1211,16 +1177,6 @@ video {
 
 .translate-y-px {
   --tw-translate-y: 1px;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.-rotate-45 {
-  --tw-rotate: -45deg;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.rotate-45 {
-  --tw-rotate: 45deg;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
@@ -1364,10 +1320,6 @@ video {
   overflow-y: auto;
 }
 
-.whitespace-nowrap {
-  white-space: nowrap;
-}
-
 .text-wrap {
   text-wrap: wrap;
 }
@@ -1386,6 +1338,10 @@ video {
 
 .rounded-md {
   border-radius: 0.375rem;
+}
+
+.rounded-sm {
+  border-radius: 0.125rem;
 }
 
 .rounded-b-md {
@@ -1460,11 +1416,6 @@ video {
   border-color: rgb(148 163 184 / var(--tw-border-opacity, 1));
 }
 
-.border-slate-800 {
-  --tw-border-opacity: 1;
-  border-color: rgb(30 41 59 / var(--tw-border-opacity, 1));
-}
-
 .border-transparent {
   border-color: transparent;
 }
@@ -1501,29 +1452,19 @@ video {
   border-inline-start-color: transparent;
 }
 
-.border-t-slate-300 {
-  --tw-border-opacity: 1;
-  border-top-color: rgb(203 213 225 / var(--tw-border-opacity, 1));
-}
-
 .border-t-vlp {
   --tw-border-opacity: 1;
   border-top-color: rgb(255 255 255 / var(--tw-border-opacity, 1));
 }
 
+.border-t-vls2 {
+  --tw-border-opacity: 1;
+  border-top-color: rgb(43 52 64 / var(--tw-border-opacity, 1));
+}
+
 .\!bg-vlp {
   --tw-bg-opacity: 1 !important;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity, 1)) !important;
-}
-
-.bg-black {
-  --tw-bg-opacity: 1;
-  background-color: rgb(0 0 0 / var(--tw-bg-opacity, 1));
-}
-
-.bg-blue-800 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(30 64 175 / var(--tw-bg-opacity, 1));
 }
 
 .bg-gray-100 {
@@ -1556,14 +1497,14 @@ video {
   background-color: rgb(3 105 161 / var(--tw-bg-opacity, 1));
 }
 
-.bg-slate-500 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(100 116 139 / var(--tw-bg-opacity, 1));
-}
-
 .bg-slate-600 {
   --tw-bg-opacity: 1;
   background-color: rgb(71 85 105 / var(--tw-bg-opacity, 1));
+}
+
+.bg-vla2 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(75 168 95 / var(--tw-bg-opacity, 1));
 }
 
 .bg-vlp {
@@ -1576,37 +1517,8 @@ video {
   background-color: rgb(211 213 214 / var(--tw-bg-opacity, 1));
 }
 
-.bg-vls {
-  --tw-bg-opacity: 1;
-  background-color: rgb(139 145 151 / var(--tw-bg-opacity, 1));
-}
-
-.bg-vls2 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(43 52 64 / var(--tw-bg-opacity, 1));
-}
-
-.bg-vla {
-  --tw-bg-opacity: 1;
-  background-color: rgb(83 207 110 / var(--tw-bg-opacity, 1));
-}
-
-.bg-vla2 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(75 168 95 / var(--tw-bg-opacity, 1));
-}
-
-.bg-vla3 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(33 100 48 / var(--tw-bg-opacity, 1));
-}
-
 .bg-opacity-50 {
   --tw-bg-opacity: 0.5;
-}
-
-.bg-opacity-90 {
-  --tw-bg-opacity: 0.9;
 }
 
 .\!p-1 {
@@ -1694,16 +1606,17 @@ video {
   padding-bottom: 1rem;
 }
 
+.px-1 {
+  padding-left: 0.25rem;
+  padding-right: 0.25rem;
+}
+
 .\!pl-12 {
   padding-left: 3rem !important;
 }
 
 .pl-1\.5 {
   padding-left: 0.375rem;
-}
-
-.pl-12 {
-  padding-left: 3rem;
 }
 
 .pl-2 {
@@ -1724,6 +1637,10 @@ video {
 
 .pr-2 {
   padding-right: 0.5rem;
+}
+
+.pr-1 {
+  padding-right: 0.25rem;
 }
 
 .text-left {
@@ -1794,10 +1711,6 @@ video {
   line-height: 1rem;
 }
 
-.font-bold {
-  font-weight: 700;
-}
-
 .font-light {
   font-weight: 300;
 }
@@ -1829,11 +1742,6 @@ video {
 .text-blue-500 {
   --tw-text-opacity: 1;
   color: rgb(59 130 246 / var(--tw-text-opacity, 1));
-}
-
-.text-gray-400 {
-  --tw-text-opacity: 1;
-  color: rgb(156 163 175 / var(--tw-text-opacity, 1));
 }
 
 .text-gray-500 {
@@ -1981,6 +1889,18 @@ video {
 
 .outline {
   outline-style: solid;
+}
+
+.outline-1 {
+  outline-width: 1px;
+}
+
+.outline-offset-8 {
+  outline-offset: 8px;
+}
+
+.outline-vls\/80 {
+  outline-color: rgb(139 145 151 / 0.8);
 }
 
 .grayscale {
@@ -3550,11 +3470,6 @@ input[type='radio']:checked {
   border-color: rgb(254 160 154 / var(--tw-border-opacity, 1));
 }
 
-.hover\:bg-blue-900:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(30 58 138 / var(--tw-bg-opacity, 1));
-}
-
 .hover\:bg-gray-300:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(209 213 219 / var(--tw-bg-opacity, 1));
@@ -3595,14 +3510,14 @@ input[type='radio']:checked {
   background-color: rgb(71 85 105 / var(--tw-bg-opacity, 1));
 }
 
-.hover\:bg-vlp:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(255 255 255 / var(--tw-bg-opacity, 1));
-}
-
 .hover\:bg-vla3:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(33 100 48 / var(--tw-bg-opacity, 1));
+}
+
+.hover\:bg-vlp:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity, 1));
 }
 
 .hover\:fill-vls:hover {
@@ -3627,11 +3542,6 @@ input[type='radio']:checked {
 .hover\:text-vla:hover {
   --tw-text-opacity: 1;
   color: rgb(83 207 110 / var(--tw-text-opacity, 1));
-}
-
-.hover\:text-vls:hover {
-  --tw-text-opacity: 1;
-  color: rgb(139 145 151 / var(--tw-text-opacity, 1));
 }
 
 .hover\:text-vls2:hover {
@@ -3679,11 +3589,6 @@ input[type='radio']:checked {
   background-color: rgb(100 116 139 / var(--tw-bg-opacity, 1));
 }
 
-.focus\:bg-slate-600:focus {
-  --tw-bg-opacity: 1;
-  background-color: rgb(71 85 105 / var(--tw-bg-opacity, 1));
-}
-
 .focus\:bg-vlp:focus {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity, 1));
@@ -3699,11 +3604,6 @@ input[type='radio']:checked {
   color: rgb(83 207 110 / var(--tw-text-opacity, 1));
 }
 
-.focus\:text-vls:focus {
-  --tw-text-opacity: 1;
-  color: rgb(139 145 151 / var(--tw-text-opacity, 1));
-}
-
 .focus\:outline-none:focus {
   outline: 2px solid transparent;
   outline-offset: 2px;
@@ -3711,12 +3611,6 @@ input[type='radio']:checked {
 
 .focus\:outline-vla:focus {
   outline-color: #53CF6E;
-}
-
-.focus\:ring:focus {
-  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
-  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(3px + var(--tw-ring-offset-width)) var(--tw-ring-color);
-  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
 }
 
 .focus\:ring-2:focus {
@@ -3754,6 +3648,14 @@ input[type='radio']:checked {
 .active\:bg-slate-500:active {
   --tw-bg-opacity: 1;
   background-color: rgb(100 116 139 / var(--tw-bg-opacity, 1));
+}
+
+.dark\:border:is(.dark *) {
+  border-width: 1px;
+}
+
+.dark\:\!border:is(.dark *) {
+  border-width: 1px !important;
 }
 
 .dark\:border-neutral-300:is(.dark *) {
@@ -3796,14 +3698,29 @@ input[type='radio']:checked {
   border-color: rgb(254 160 154 / var(--tw-border-opacity, 1));
 }
 
+.dark\:border-vds3neu700:is(.dark *) {
+  --tw-border-opacity: 1;
+  border-color: rgb(64 64 64 / var(--tw-border-opacity, 1));
+}
+
+.dark\:\!border-vds3neu700:is(.dark *) {
+  --tw-border-opacity: 1 !important;
+  border-color: rgb(64 64 64 / var(--tw-border-opacity, 1)) !important;
+}
+
+.dark\:\!border-vds:is(.dark *) {
+  --tw-border-opacity: 1 !important;
+  border-color: rgb(212 212 212 / var(--tw-border-opacity, 1)) !important;
+}
+
+.dark\:\!border-vds2:is(.dark *) {
+  --tw-border-opacity: 1 !important;
+  border-color: rgb(82 82 82 / var(--tw-border-opacity, 1)) !important;
+}
+
 .dark\:border-t-vds2:is(.dark *) {
   --tw-border-opacity: 1;
   border-top-color: rgb(82 82 82 / var(--tw-border-opacity, 1));
-}
-
-.dark\:border-t-vred-300:is(.dark *) {
-  --tw-border-opacity: 1;
-  border-top-color: rgb(254 160 154 / var(--tw-border-opacity, 1));
 }
 
 .dark\:border-t-zinc-900:is(.dark *) {
@@ -3900,6 +3817,10 @@ input[type='radio']:checked {
   color: rgb(212 212 212 / var(--tw-placeholder-opacity, 1));
 }
 
+.dark\:outline-vdp3:is(.dark *) {
+  outline-color: #3f3f46;
+}
+
 .dark\:placeholder\:text-neutral-300:is(.dark *)::-moz-placeholder {
   --tw-text-opacity: 1;
   color: rgb(212 212 212 / var(--tw-text-opacity, 1));
@@ -3915,6 +3836,11 @@ input[type='radio']:checked {
   border-color: rgb(254 160 154 / var(--tw-border-opacity, 1));
 }
 
+.dark\:hover\:\!border-vds:hover:is(.dark *) {
+  --tw-border-opacity: 1 !important;
+  border-color: rgb(212 212 212 / var(--tw-border-opacity, 1)) !important;
+}
+
 .dark\:hover\:bg-neutral-500:hover:is(.dark *) {
   --tw-bg-opacity: 1;
   background-color: rgb(115 115 115 / var(--tw-bg-opacity, 1));
@@ -3923,11 +3849,6 @@ input[type='radio']:checked {
 .dark\:hover\:bg-neutral-600:hover:is(.dark *) {
   --tw-bg-opacity: 1;
   background-color: rgb(82 82 82 / var(--tw-bg-opacity, 1));
-}
-
-.dark\:hover\:bg-neutral-700:hover:is(.dark *) {
-  --tw-bg-opacity: 1;
-  background-color: rgb(64 64 64 / var(--tw-bg-opacity, 1));
 }
 
 .dark\:hover\:bg-vdp3:hover:is(.dark *) {
@@ -3994,9 +3915,9 @@ input[type='radio']:checked {
   border-color: rgb(254 160 154 / var(--tw-border-opacity, 1));
 }
 
-.dark\:focus\:bg-neutral-700:focus:is(.dark *) {
-  --tw-bg-opacity: 1;
-  background-color: rgb(64 64 64 / var(--tw-bg-opacity, 1));
+.dark\:focus\:\!border-vds:focus:is(.dark *) {
+  --tw-border-opacity: 1 !important;
+  border-color: rgb(212 212 212 / var(--tw-border-opacity, 1)) !important;
 }
 
 .dark\:focus\:bg-vlp:focus:is(.dark *) {
