--- a/public/css/style.css
+++ b/public/css/style.css
@@ -131,12 +131,12 @@ input::-webkit-inner-spin-button {
 
 /* MARK: Table styles - borders */
 .round-left-border {
-  border-top-left-radius: 0.375rem;
-  border-bottom-left-radius: 0.375rem;
+  border-top-left-radius: 0.28rem;
+  border-bottom-left-radius: 0.28rem;
 }
 .round-right-border {
-  border-top-right-radius: 0.375rem;
-  border-bottom-right-radius: 0.375rem;
+  border-top-right-radius: 0.28rem;
+  border-bottom-right-radius: 0.28rem;
 }
 .border-hover-ring-efect {
   @apply transition duration-100 rounded-md cursor-default ring-1 ring-vls/30;
@@ -146,7 +146,7 @@ input::-webkit-inner-spin-button {
   @apply mb-12 overflow-y-auto;
 }
 .table-head-style {
-  @apply sticky top-0 z-10 text-base font-medium rounded bg-vls2 text-vlp;
+  @apply sticky top-0 z-10 text-base rounded bg-vls shadow-md text-vlp border;
   @apply dark:bg-vdp dark:text-vds;
 }
 .table-head-works {
@@ -185,7 +185,7 @@ input::-webkit-inner-spin-button {
 
 .table-interaction-icon-blue {
   @apply transition duration-100 rounded-full text-vls2;
-  @apply hover:bg-vlp2/60 hover:text-vla;
+  @apply hover:bg-vlp2/60 hover:text-blue-500;
   @apply dark:text-vds;
   @apply dark:hover:bg-vlp2/20 dark:hover:text-blue-400;
   @apply active:scale-95;
@@ -270,7 +270,7 @@ input::-webkit-inner-spin-button {
   @apply absolute inset-0 z-10 w-1/2 h-full duration-500 ease-out; /* Align within parent */
 }
 .toggler-handle-inner {
-  @apply z-10 !h-full !w-full rounded-md bg-vls2 shadow-sm dark:bg-zinc-900;
+  @apply z-10 !h-full !w-full rounded-md bg-vls shadow-sm dark:bg-zinc-900;
 }
 .toggler-active,
 .toggler-inactive {
@@ -289,12 +289,11 @@ input::-webkit-inner-spin-button {
 /* Togglers Ends */
 /* MARK:Search Input*/
 .srch-style {
-  @apply flex p-2 text-sm font-medium transition duration-500 border border-transparent rounded-md bg-vls2 text-vlp2 placeholder:text-vlp2;
-  @apply hover:border-vla hover:bg-vls3 hover:text-vlp;
-  @apply focus:border-vla focus:bg-vls3 focus:text-vlp focus:outline-none;
+  @apply flex items-center gap-2 text-sm p-1 rounded bg-gray-100 text-vls3 border border-gray-300 hover:bg-gray-200 transition placeholder:text-vls2/80;
+  @apply focus:border-vls2/20  focus:text-vls3 focus:outline-none focus:bg-gray-200;
 }
 .dark .srch-style {
-  @apply p-2 text-sm font-medium transition duration-500 border-transparent bg-vdp text-vds placeholder:text-vds3light;
+  @apply p-1 text-sm font-medium transition duration-500 border-transparent bg-vdp text-vds placeholder:text-vds3light;
   @apply hover:border-vda hover:text-vds hover:placeholder-vds;
   @apply focus:border-vda focus:text-vds focus:placeholder-vds focus:outline-none;
 }
@@ -330,20 +329,59 @@ input::-webkit-inner-spin-button {
 .inner-modal-dropdown-open {
   @apply flex justify-center p-2 transition duration-300 border border-vls2 text-vls2 dark:border-vds dark:text-vds;
 }
-.modal-btn-prim {
-  @apply px-2 py-1 text-sm duration-500 border border-vlp/10 rounded-md bg-vls2 text-vlp2;
-  @apply hover:border-vla hover:bg-vls3 hover:text-vla;
-  @apply active:scale-95 active:border-vla;
+/* .modal-btn-prim {
+  @apply flex items-center gap-2 text-sm p-1 rounded bg-gray-100 text-vls3 border border-gray-300 hover:bg-gray-200 transition;
 }
 .dark .modal-btn-prim {
-  @apply px-2 py-1 text-sm duration-500 border border-vds2 rounded-md bg-vdp2 text-vds;
-  @apply hover:border-vda2 hover:bg-vdp hover:text-vda2;
-  @apply active:scale-95;
-}
+  @apply transition dark:text-vds dark:bg-zinc-800 dark:border-zinc-700 dark:hover:bg-zinc-700;
+} */
+
 .modal-btn-sec {
-  @apply px-2 py-1 text-base transition duration-300 bg-red-800 rounded-md text-vlp;
-  @apply hover:bg-red-700;
-  @apply active:scale-95;
+  @apply p-1 text-sm transition bg-red-700 rounded text-vlp hover:bg-red-600 active:scale-95;
+}
+.dark .modal-btn-sec {
+  @apply p-1 text-sm transition bg-red-800 rounded text-vlp hover:bg-red-700 active:scale-95;
+}
+
+.modal-btn-prim {
+  @apply flex items-center gap-2 text-sm p-1 rounded bg-gray-100 text-vls3 border border-gray-300 hover:bg-gray-200 transition;
+  position: relative; /* Required for the ripple effect */
+  overflow: hidden; /* Ensure the ripple doesn't exceed button boundaries */
+}
+
+.dark .modal-btn-prim {
+  @apply transition dark:text-vds dark:bg-zinc-800 dark:border-zinc-700 dark:hover:bg-zinc-700;
+}
+
+.modal-btn-prim:after {
+  content: '';
+  background: rgb(255, 255, 255);
+  display: block;
+  position: absolute;
+  padding-top: 300%;
+  padding-left: 300%;
+  margin-left: -150%;
+  margin-top: -150%;
+  opacity: 0;
+  transition: all 0.6s ease; /* Smooth transition for the ripple */
+}
+.dark .modal-btn-prim:after {
+  content: '';
+  background: rgba(255, 255, 255, 0.5);
+  display: block;
+  position: absolute;
+  padding-top: 300%;
+  padding-left: 300%;
+  margin-left: -150%;
+  margin-top: -150%;
+  opacity: 0;
+  transition: all 0.6s ease; /* Smooth transition for the ripple */
+}
+.modal-btn-prim:active:after {
+  padding: 0;
+  margin: 0;
+  opacity: 1;
+  transition: 0s; /* Instant trigger for the ripple effect */
 }
 
 .inner-modal-size-positioning-relative {
