--- a/public/css/outputTailwind.css
+++ b/public/css/outputTailwind.css
@@ -691,14 +691,6 @@ video {
   z-index: 99;
 }
 
-.col-span-1 {
-  grid-column: span 1 / span 1;
-}
-
-.col-span-2 {
-  grid-column: span 2 / span 2;
-}
-
 .m-1 {
   margin: 0.25rem;
 }
@@ -847,6 +839,10 @@ video {
   margin-top: auto;
 }
 
+.mt-4 {
+  margin-top: 1rem;
+}
+
 .block {
   display: block;
 }
@@ -922,6 +918,10 @@ video {
   height: 2rem;
 }
 
+.h-\[80\%\] {
+  height: 80%;
+}
+
 .h-auto {
   height: auto;
 }
@@ -932,6 +932,10 @@ video {
 
 .h-screen {
   height: 100vh;
+}
+
+.h-\[70vh\] {
+  height: 70vh;
 }
 
 .max-h-80 {
@@ -952,6 +956,22 @@ video {
 
 .max-h-\[calc\(80vh-200px\)\] {
   max-height: calc(80vh - 200px);
+}
+
+.max-h-48 {
+  max-height: 12rem;
+}
+
+.max-h-64 {
+  max-height: 16rem;
+}
+
+.max-h-\[calc\(100\%-80px\)\] {
+  max-height: calc(100% - 80px);
+}
+
+.max-h-full {
+  max-height: 100%;
 }
 
 .\!w-11\/12 {
@@ -1010,10 +1030,6 @@ video {
   width: 50%;
 }
 
-.w-20 {
-  width: 5rem;
-}
-
 .w-36 {
   width: 9rem;
 }
@@ -1050,6 +1066,10 @@ video {
   width: 25%;
 }
 
+.w-\[30\%\] {
+  width: 30%;
+}
+
 .w-\[5\%\] {
   width: 5%;
 }
@@ -1064,6 +1084,10 @@ video {
 
 .w-\[65\%\] {
   width: 65%;
+}
+
+.w-\[70\%\] {
+  width: 70%;
 }
 
 .w-\[75\%\] {
@@ -1093,6 +1117,10 @@ video {
 
 .w-screen {
   width: 100vw;
+}
+
+.w-20 {
+  width: 5rem;
 }
 
 .min-w-0 {
@@ -1125,6 +1153,14 @@ video {
 
 .max-w-xs {
   max-width: 20rem;
+}
+
+.max-w-2xl {
+  max-width: 42rem;
+}
+
+.max-w-sm {
+  max-width: 24rem;
 }
 
 .flex-1 {
@@ -1336,8 +1372,22 @@ video {
   margin-bottom: calc(1rem * var(--tw-space-y-reverse));
 }
 
-.place-self-end {
-  place-self: end;
+.space-x-2 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-x-reverse: 0;
+  margin-right: calc(0.5rem * var(--tw-space-x-reverse));
+  margin-left: calc(0.5rem * calc(1 - var(--tw-space-x-reverse)));
+}
+
+.space-y-1 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-y-reverse: 0;
+  margin-top: calc(0.25rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(0.25rem * var(--tw-space-y-reverse));
+}
+
+.space-y-2 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-y-reverse: 0;
+  margin-top: calc(0.5rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(0.5rem * var(--tw-space-y-reverse));
 }
 
 .\!place-self-center {
@@ -1470,6 +1520,10 @@ video {
   border-top-width: 8px;
 }
 
+.border-b {
+  border-bottom-width: 1px;
+}
+
 .border-gray-200 {
   --tw-border-opacity: 1;
   border-color: rgb(229 231 235 / var(--tw-border-opacity, 1));
@@ -1522,6 +1576,10 @@ video {
 
 .border-vls\/80 {
   border-color: rgb(139 145 151 / 0.8);
+}
+
+.border-vlp\/30 {
+  border-color: rgb(255 255 255 / 0.3);
 }
 
 .border-e-transparent {
@@ -1615,6 +1673,11 @@ video {
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity, 1));
+}
+
+.bg-red-700 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(185 28 28 / var(--tw-bg-opacity, 1));
 }
 
 .bg-opacity-50 {
@@ -1806,16 +1869,16 @@ video {
   padding-right: 0.25rem;
 }
 
+.pr-12 {
+  padding-right: 3rem;
+}
+
 .pr-2 {
   padding-right: 0.5rem;
 }
 
 .pr-4 {
   padding-right: 1rem;
-}
-
-.pr-8 {
-  padding-right: 2rem;
 }
 
 .text-left {
@@ -1924,11 +1987,6 @@ video {
   line-height: 1.25;
 }
 
-.text-gray-500 {
-  --tw-text-opacity: 1;
-  color: rgb(107 114 128 / var(--tw-text-opacity, 1));
-}
-
 .text-gray-600 {
   --tw-text-opacity: 1;
   color: rgb(75 85 99 / var(--tw-text-opacity, 1));
@@ -1942,6 +2000,11 @@ video {
 .text-gray-950 {
   --tw-text-opacity: 1;
   color: rgb(3 7 18 / var(--tw-text-opacity, 1));
+}
+
+.text-red-500 {
+  --tw-text-opacity: 1;
+  color: rgb(239 68 68 / var(--tw-text-opacity, 1));
 }
 
 .text-red-600 {
@@ -1989,8 +2052,20 @@ video {
   color: rgb(43 52 64 / var(--tw-text-opacity, 1));
 }
 
+.text-vls2\/60 {
+  color: rgb(43 52 64 / 0.6);
+}
+
+.text-vls2\/70 {
+  color: rgb(43 52 64 / 0.7);
+}
+
 .text-vls2\/80 {
   color: rgb(43 52 64 / 0.8);
+}
+
+.text-vls2\/90 {
+  color: rgb(43 52 64 / 0.9);
 }
 
 .text-vls3 {
@@ -2006,6 +2081,10 @@ video {
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity, 1));
+}
+
+.text-opacity-90 {
+  --tw-text-opacity: 0.9;
 }
 
 .underline {
@@ -2040,6 +2119,14 @@ video {
 
 .opacity-35 {
   opacity: 0.35;
+}
+
+.opacity-90 {
+  opacity: 0.9;
+}
+
+.opacity-95 {
+  opacity: 0.95;
 }
 
 .shadow {
@@ -3877,6 +3964,10 @@ input[type='radio']:checked {
   color: rgb(139 145 151 / var(--tw-text-opacity, 1));
 }
 
+.last\:border-b-0:last-child {
+  border-bottom-width: 0px;
+}
+
 .hover\:border-vla:hover {
   --tw-border-opacity: 1;
   border-color: rgb(83 207 110 / var(--tw-border-opacity, 1));
@@ -3937,6 +4028,16 @@ input[type='radio']:checked {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity, 1));
 }
 
+.hover\:bg-red-800:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(153 27 27 / var(--tw-bg-opacity, 1));
+}
+
+.hover\:bg-vla:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(83 207 110 / var(--tw-bg-opacity, 1));
+}
+
 .hover\:fill-vls:hover {
   fill: #8B9197;
 }
@@ -3956,9 +4057,9 @@ input[type='radio']:checked {
   color: rgb(55 65 81 / var(--tw-text-opacity, 1));
 }
 
-.hover\:text-red-800:hover {
+.hover\:text-red-600:hover {
   --tw-text-opacity: 1;
-  color: rgb(153 27 27 / var(--tw-text-opacity, 1));
+  color: rgb(220 38 38 / var(--tw-text-opacity, 1));
 }
 
 .hover\:text-sky-500:hover {
@@ -3974,6 +4075,11 @@ input[type='radio']:checked {
 .hover\:text-vls2:hover {
   --tw-text-opacity: 1;
   color: rgb(43 52 64 / var(--tw-text-opacity, 1));
+}
+
+.hover\:text-white:hover {
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity, 1));
 }
 
 .hover\:underline:hover {
@@ -4201,6 +4307,11 @@ input[type='radio']:checked {
   background-color: rgb(24 24 27 / var(--tw-bg-opacity, 1));
 }
 
+.dark\:bg-sky-600:is(.dark *) {
+  --tw-bg-opacity: 1;
+  background-color: rgb(2 132 199 / var(--tw-bg-opacity, 1));
+}
+
 .dark\:text-gray-100:is(.dark *) {
   --tw-text-opacity: 1;
   color: rgb(243 244 246 / var(--tw-text-opacity, 1));
@@ -4224,6 +4335,15 @@ input[type='radio']:checked {
 .dark\:text-vds:is(.dark *) {
   --tw-text-opacity: 1;
   color: rgb(212 212 212 / var(--tw-text-opacity, 1));
+}
+
+.dark\:text-vds\/70:is(.dark *) {
+  color: rgb(212 212 212 / 0.7);
+}
+
+.dark\:text-vds2:is(.dark *) {
+  --tw-text-opacity: 1;
+  color: rgb(82 82 82 / var(--tw-text-opacity, 1));
 }
 
 .dark\:text-vds3light:is(.dark *) {
@@ -4310,6 +4430,11 @@ input[type='radio']:checked {
 .dark\:hover\:bg-vdp3:hover:is(.dark *) {
   --tw-bg-opacity: 1;
   background-color: rgb(63 63 70 / var(--tw-bg-opacity, 1));
+}
+
+.dark\:hover\:bg-sky-700:hover:is(.dark *) {
+  --tw-bg-opacity: 1;
+  background-color: rgb(3 105 161 / var(--tw-bg-opacity, 1));
 }
 
 .dark\:hover\:fill-vred-300:hover:is(.dark *) {
